--- a/style.css
+++ b/style.css
@@ -8,9 +8,59 @@
 }
 .background{
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 
-    background: url(/img/bg.jpg) center no-repeat;
-    background-size: cover;
-
+    /* background: url(/img/bg.jpg) center no-repeat; */
+    /* background-size: cover; */
+    z-index: 0;
+}
+.planet_1{
+    position: fixed;
+    top: 65px;
+    right: 680px;
+    width: 300px;
+    z-index: 10;
+    
+}
+.planet_2{
+    position: fixed;
+    top: 200px;
+    right: 850px;
+    width: 400px;
+    z-index: 20;
+}
+.spaceship{
+    position: fixed;
+    top: 440px;
+    right: 950px;
+    width: 100px;
+    z-index: 20;
+}
+.planet_3{
+    position: fixed;
+    top: 410px;
+    right: 460px;
+    width: 600px;
+    z-index: 30;
+}
+.ufo{
+    position: fixed;
+    top: 745px;
+    right: 960px;
+    width: 190px;
+    z-index: 30;
+}
+.asteroid{
+    position: fixed;
+    top: 200px;
+    right: 285px;
+    width: 150px;
+    z-index: 30;
+}
+.superman{
+    position: fixed;
+    bottom: 0;
+    right: 145px;
+    width: 200px;
+    z-index: 30;
 }
